Added washington data

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "seattle = pd.read_csv(\"City_zhvi_uc_sfr_tier_0.33_0.67_sm_sa_month.csv\")\n",
+    "wa = pd.read_csv(\"data\\State.csv\")\n",
     "\n",
-    "seattle = seattle[seattle.RegionName == \"Seattle\"]\n",
+    "wa = wa[wa.RegionName == \"Washington\"]\n",
     "\n",
-    "transform = seattle.drop(columns = seattle.columns[0:8])\n",
+    "transform = wa.drop(columns = wa.columns[0:5])\n",
     "\n",
     "transposed = transform.T\n",
     "\n",
@@ -21,7 +21,7 @@
     "\n",
     "transposed.columns = [\"Date\", \"Price\"]\n",
     "\n",
-    "transposed.to_csv(\"Seattle.csv\", index=True)"
+    "transposed.to_csv(\"data\\Washington.csv\", index=True)"
    ]
   }
  ],
