Beginning data join

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "\n",
     "transposed.columns = [\"Date\", \"Price\"]\n",
     "\n",
-    "transposed.to_csv(\"data\\Washington.csv\", index=True)"
+    "transposed.to_csv(\"data\\Washington.csv\", index=False)"
    ]
   }
  ],
