--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "\n",
     "wa = pd.read_csv(\"data\\State.csv\")\n",
     "\n",
-    "wa = wa[wa.RegionName == \"Washington\"]\n",
+    "wa = wa[wa.RegionName == \"Washington\" ]\n",
+    "\n",
+    "wa = wa[wa.RegionName.isin([\"Washington\", \"Oregon\"])]\n",
     "\n",
     "transform = wa.drop(columns = wa.columns[0:5])\n",
     "\n",
